<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan" >

       <requestFocus />
       
      
       <Button
           android:id="@+id/buttonRegisterSubmit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_alignParentLeft="true"
           android:layout_alignRight="@+id/firstname"
           android:layout_margin="5dp"
           android:paddingLeft="0dp"
           android:text="@string/buttonSubmit"
           android:textColor="@color/black"
           android:textSize="18sp" />
        <Button
           android:id="@+id/buttonRegisterCancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_margin="5dp"
           android:layout_marginRight="43dp"
           android:paddingLeft="20dp"
           android:text="@string/buttonCancel"
           android:textSize="20sp" />

       <TextView
           android:id="@+id/firstname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:text="@string/Textviewfirstname"
           android:textColor="@color/black"
           android:textSize="20sp" />

       <EditText
           android:id="@+id/editText2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/firstname"
           android:ems="10"
           android:inputType="textPersonName" />

       <TextView
           android:id="@+id/idnumber"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/editText4"
           android:layout_marginTop="25dp"
           android:text="@string/Textviewidnumber"
           android:textColor="@color/black"
           android:textSize="20sp" />

       <TextView
           android:id="@+id/secondname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/buttonRegisterSubmit"
           android:layout_below="@+id/editText2"
           android:layout_marginTop="20dp"
           android:text="@string/Textviewsecondname"
           android:textColor="@color/black"
           android:textSize="20sp" />

       <EditText
           android:id="@+id/editText1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/secondname"
           android:ems="10"
           android:inputType="textPersonName" />

       <TextView
           android:id="@+id/email"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/secondname"
           android:layout_below="@+id/editText1"
           android:layout_marginTop="14dp"
           android:text="@string/Textviewemail"
           android:textSize="20sp" />

       <EditText
           android:id="@+id/editText4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/email"
           android:layout_below="@+id/email"
           android:ems="10"
           android:inputType="textEmailAddress" />

       <EditText
           android:id="@+id/editText3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/editText4"
           android:layout_below="@+id/idnumber"
           android:ems="10"
           android:inputType="number" />

       <Spinner
           android:id="@+id/spinner1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/editText3" />

</RelativeLayout>
